@@ -8,3 +8,10 @@
 eg:s
 	eg:p eg:o ,
 		eg:o .
+
+@prefix eg: <eg#> .
+@prefix eg: <http://example.org/eg#> .
+@prefix eg: <http://example.org/eg#> .
+@base <base> .
+@base <http://example.org/base> .
+@base <http://example.org/base> .
