@@ -7,8 +7,9 @@ serd (0.32.5) unstable; urgency=medium
   * Fix reading prefix names that start with "true." or "false."
   * Refuse to write incoherent statements
   * Remove project and version number from man page OS field
+  * Write a blank line between statements and Turtle/TriG directives
 
- -- David Robillard <d@drobilla.net>  Sun, 16 Mar 2025 22:02:00 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 11 Apr 2025 16:16:54 +0000
 
 serd (0.32.4) stable; urgency=medium
 
